@@ -1,5 +1,6 @@
 14 September 2005 Sylvain Pion
 - Use K::Oriented_side instead of CGAL::Oriented_side.
+- Remove qualified_result_type from functors.
 
 14 September 2005 Andreas Fabri
 - Removed functors as they have special versions in Cartesian_kernel and H2
